--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "esbuild-register": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "typescript": "^4.4.4"
   },
   "devDependencies": {}
