--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "esbuild": "^0.13.14",
     "esbuild-node-tsc": "^1.8.0",
     "esbuild-register": "^3.1.2",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
