--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "author": "stmtk",
   "license": "MIT",
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "esbuild": "^0.13.14",
     "esbuild-node-tsc": "^1.8.0",
     "esbuild-register": "^3.1.2",
@@ -17,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
   "devDependencies": {}
