--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,13 @@
         "module": "ES2020",
         "moduleResolution": "Node",
         "esModuleInterop": true,
+        "typeRoots": ["./src/types"],
         "lib": ["DOM", "ES2020"],
         "strict": true,
         "jsx": "react"
     },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules/**/*", "dist/**/*"],
     "ts-node": {
         "complerOptions": {
             "target": "ES2015",
