--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn type-check && node build.js",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src/**/*.{ts,tsx}"
   },
   "dependencies": {
     "@types/lodash": "^4.14.177",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/parser": "^5.6.0",
     "esbuild": "^0.13.14",
     "esbuild-node-tsc": "^1.8.0",
     "esbuild-register": "^3.1.2",
+    "eslint": "^8.4.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
