--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "main": "index.js",
   "author": "stmtk",
   "license": "MIT",
+  "lint-staged": {
+      "src/**/*.{ts, tsx}": ["eslint --fix"]
+  },
+  "husky": {
+      "hooks": {
+          "pre-commit": "lint-staged"
+      }
+  },
   "scripts": {
     "build": "yarn type-check && node build.js",
     "type-check": "tsc --noEmit",
@@ -20,6 +28,8 @@
     "esbuild-node-tsc": "^1.8.0",
     "esbuild-register": "^3.1.2",
     "eslint": "^8.4.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
